package com.form;

import java.util.EventListener;

public interface FormListener extends EventListener {
    void formEventOcurred(FormEvent e);

}
